--- a/sass/components/_divider.scss
+++ b/sass/components/_divider.scss
@@ -2,6 +2,10 @@
 
 .divider {
     @include fadeInAnimation(0.3s, 0s);
-    height: 50px;
-    background-color: $dividerColor;
+    margin: 0px auto;
+    width: 100%;
+    height: 10px;
+    filter: blur(1px);
+    box-shadow: 0px 0px 10px 0px $dividerColor ;
+    background-color: $dividerColor ;
 }
