--- a/sass/components/_introductory_hero.scss
+++ b/sass/components/_introductory_hero.scss
@@ -2,6 +2,7 @@
 
 .hero__container-image {
     @include fadeInAnimation(0.6s, 0s);
+    padding-top: 60px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -14,6 +15,7 @@
     }
 
     h1 {
+        @include slideDownAnimation(1s, 0s);
         position: absolute;
         font-size: 60px;
         text-align: center;
