--- a/sass/components/_leftAligned-text.scss
+++ b/sass/components/_leftAligned-text.scss
@@ -3,11 +3,14 @@
 /* desktop left aligned text container */
 @media (min-width : 1200px) {
 
-    .leftAligned__text h2 {
+    .leftAligned__text {
+
+        h2{
         @include fadeInAnimation(3s, 0s);
         margin-top: 50px;
         margin-left: 60px;
         font-size: 48px;
+        }
     }
 
 }
@@ -19,13 +22,12 @@
         @include fadeInAnimation(3s, 0s);
         justify-content: center;
         display: flex;
+
+        h2 {
+
+            margin-top: 30px;
+            margin-bottom: 0px;
+            font-size: 48px;
+        }
     }
-
-    .leftAligned__text h2 {
-
-        margin-top: 30px;
-        margin-bottom: 0px;
-        font-size: 48px;
-    }
-
 }
