--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -1,9 +1,3 @@
-//smooth ease effect with an adjustable time
-
-@mixin smoothTransition ($time, $delay) {
-    transition: ease $time;
-    animation-delay: $delay;
-}
 
 //fade in animation 
 
@@ -24,5 +18,37 @@
         100% {
             opacity: 1;
         }
+    }
+}
+
+@mixin slideDownAnimation($time, $delay) {
+
+    opacity: 0;
+    animation-name: slideDown;
+    animation-duration: $time;
+    animation-delay: $delay;
+    animation-fill-mode: forwards;
+  
+    @keyframes slideDown {
+      0% {
+        transform: translateY(-100%);
+        opacity: 0;
+      }
+      100% {
+        transform: translateY(0%);
+        opacity: 1;
+      }
+    }
+  }
+
+//custom button size on hover
+
+@mixin buttonHoverEffect ($width, $height){
+    &:hover{
+        width: $width;
+        height: $height;
+        background-color: $btnHoverColor;
+        opacity: 1;
+        transition: ease 0.2s;
     }
 }
