--- a/sass/views/_about-me.scss
+++ b/sass/views/_about-me.scss
@@ -1,21 +1,4 @@
 /* about me page CSS */
-
-/* mobile profile header */
-
-@media (max-width : 720px) {
-
-    #profile__header {
-        display: none;
-    }
-}
-
-#info__paragraph {
-    p {
-        margin: 30px 30px 50px 30px;
-        text-align: center;
-    }
-}
-
 .about__grid {
     @include fadeInAnimation(1s, 0s);
     margin-top: 50px;
@@ -23,7 +6,6 @@
     gap: 30px;
     justify-content: center;
 }
-
 
 /* desktop about  grid*/
 @media (min-width : 1200px) {
@@ -34,7 +16,7 @@
             object-fit: contain;
             border-radius: 30%;
             width: 400px;
-            height: 400px;
+            height: 300px;
             transition: 0.2s;
         }
     }
@@ -44,6 +26,7 @@
 @media (max-width : 1200px) {
 
     .about__grid {
+        @include fadeInAnimation(1s, 0s);
         gap: 30px;
         align-items: center;
         margin-bottom: 50px;
