--- a/sass/views/_blog.scss
+++ b/sass/views/_blog.scss
@@ -32,6 +32,7 @@
 /* mobile blog grid*/
 @media (max-width : 1200px) {
     .blog__grid {
+        @include fadeInAnimation(1s, 0.3s);
         display: grid;
         gap: 100px;
         margin-top: 100px;
@@ -68,9 +69,11 @@
 
 @media (max-width : 720px) {
 
-    .blog__grid-element-description h2 {
+    .blog__grid-element-description {
+        h2 {
         font-size: 25px;
         margin-bottom: 15px;
+        }
     }
 }
 
@@ -78,9 +81,11 @@
 
 @media (min-width : 1200px) {
 
-    .blog__grid-element-description h2 {
+    .blog__grid-element-description {
+        h2 {
         font-size: 32px;
         margin-bottom: 15px;
+        }
     }
 }
 
