--- a/styles/main.css
+++ b/styles/main.css
@@ -8,6 +8,7 @@
 
 /*define website background*/
 body {
+  backdrop-filter: blur(4px);
   background-color: #232323;
 }
 
@@ -43,12 +44,62 @@ p {
   color: white;
 }
 
+/* set span colors */
+span {
+  font-weight: bold;
+  color: #006aff;
+}
+
 /*setup responsive font size for mobile*/
 @media (max-width: 720px) {
   p {
     font-size: 17px;
   }
 }
+.cta__button {
+  /* set button default styles */
+  text-align: center;
+  font-size: 15px;
+  border-style: outset;
+  border-color: #006aff;
+  color: white;
+  background-color: #232323;
+  border-radius: 15px;
+  margin-top: 50px;
+  height: 50px;
+  width: 130px;
+  transition: ease 0.2s;
+}
+.cta__button:hover {
+  width: 200px;
+  height: 60px;
+  background-color: #006aff;
+  opacity: 1;
+  transition: ease 0.2s;
+}
+
+.redirection__button {
+  /* set button default styles */
+  text-align: center;
+  font-size: 15px;
+  border-style: outset;
+  border-color: #006aff;
+  color: white;
+  background-color: #232323;
+  border-radius: 15px;
+  margin-top: 20px;
+  height: 50px;
+  width: 150px;
+  transition: ease 0.2s;
+}
+.redirection__button:hover {
+  width: 200px;
+  height: 60px;
+  background-color: #006aff;
+  opacity: 1;
+  transition: ease 0.2s;
+}
+
 /* bootstrap default buttons css*/
 .btn-group {
   margin: auto;
@@ -132,6 +183,7 @@ p {
   opacity: 0;
   animation: fadeIn 0.6s forwards;
   animation-delay: 0s;
+  padding-top: 60px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -154,9 +206,24 @@ p {
   object-fit: cover;
 }
 .hero__container-image h1 {
+  opacity: 0;
+  animation-name: slideDown;
+  animation-duration: 1s;
+  animation-delay: 0s;
+  animation-fill-mode: forwards;
   position: absolute;
   font-size: 60px;
   text-align: center;
+}
+@keyframes slideDown {
+  0% {
+    transform: translateY(-100%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0%);
+    opacity: 1;
+  }
 }
 
 /* Universal divider for all content separation */
@@ -164,8 +231,12 @@ p {
   opacity: 0;
   animation: fadeIn 0.3s forwards;
   animation-delay: 0s;
-  height: 50px;
-  background-color: #444444;
+  margin: 0px auto;
+  width: 100%;
+  height: 10px;
+  filter: blur(1px);
+  box-shadow: 0px 0px 10px 0px #272727;
+  background-color: #272727;
 }
 @keyframes fadeIn {
   0% {
@@ -186,7 +257,7 @@ p {
     animation: fadeIn 1s forwards;
     animation-delay: 0.5s;
     margin: 50px 20% 50px 20%;
-    text-align: center;
+    text-align: start;
   }
   @keyframes fadeIn {
     0% {
@@ -210,7 +281,7 @@ p {
     animation: fadeIn 1s forwards;
     animation-delay: 0.5s;
     margin: 20px 30px;
-    text-align: center;
+    text-align: start;
   }
   @keyframes fadeIn {
     0% {
@@ -228,29 +299,6 @@ p {
     padding-bottom: 20px;
   }
 }
-.centered__container-text {
-  /* set button default styles */
-}
-.centered__container-text button {
-  font-size: 15px;
-  border-style: outset;
-  border-color: #006aff;
-  color: white;
-  background-color: #232323;
-  border-radius: 15px;
-  margin-top: 20px;
-  height: 50px;
-  width: 150px;
-  transition: ease 0.2s;
-}
-.centered__container-text button:hover {
-  width: 200px;
-  height: 60px;
-  background-color: #006aff;
-  opacity: 1;
-  transition: ease 0.2s;
-}
-
 /* desktop left aligned text container */
 @media (min-width: 1200px) {
   .leftAligned__text h2 {
@@ -355,7 +403,7 @@ p {
     animation-delay: 0s;
     position: relative;
     display: flex;
-    margin-top: 60px;
+    padding-top: 60px;
     flex-direction: column;
     justify-content: space-between;
     height: 100%;
@@ -371,6 +419,12 @@ p {
       opacity: 1;
     }
   }
+  .hero__container-logo {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 350px;
+  }
   .hero__container-sideImage-container {
     display: none;
   }
@@ -381,6 +435,7 @@ p {
     opacity: 0;
     animation: fadeIn 1s forwards;
     animation-delay: 0s;
+    padding-top: 60px;
     position: relative;
     display: flex;
     justify-content: space-between;
@@ -397,10 +452,24 @@ p {
       opacity: 1;
     }
   }
+  .hero__container-logo p {
+    opacity: 0;
+    animation-name: slideDown;
+    animation-duration: 1s;
+    animation-delay: 0.2s;
+    animation-fill-mode: forwards;
+  }
+  @keyframes slideDown {
+    0% {
+      transform: translateY(-100%);
+      opacity: 0;
+    }
+    100% {
+      transform: translateY(0%);
+      opacity: 1;
+    }
+  }
   .hero__container-sideImage-container {
-    background-repeat: no-repeat;
-    background-size: cover;
-    /*background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0) 20%,rgba(0, 0, 0, 0.7) 100%), url('../src/Images/Dummy\ image.png');*/
     width: 50%;
     z-index: -1;
   }
@@ -416,12 +485,12 @@ p {
 .hero__container-logo img {
   height: 200px;
 }
-.hero__container-logo span {
-  color: #006aff;
+.hero__container-logo p {
+  margin-bottom: 0px;
 }
 .hero__container h1 {
   font-weight: bold;
-  font-size: 36px;
+  font-size: 60px;
   text-align: left;
 }
 
@@ -565,14 +634,14 @@ p {
       opacity: 1;
     }
   }
-  .projects__grid-image-container img {
+  .projects__grid img {
     object-fit: cover;
     border-radius: 5%;
     width: min(21vw, 400px);
     height: 250px;
     transition: 0.2s;
   }
-  .projects__grid-image-container p {
+  .projects__grid p {
     display: inline-block;
     font-size: 25px;
     /*disable pointer events to prevent blinking effect*/
@@ -608,17 +677,6 @@ p {
 }
 
 /* about me page CSS */
-/* mobile profile header */
-@media (max-width: 720px) {
-  #profile__header {
-    display: none;
-  }
-}
-#info__paragraph p {
-  margin: 30px 30px 50px 30px;
-  text-align: center;
-}
-
 .about__grid {
   opacity: 0;
   animation: fadeIn 1s forwards;
@@ -662,16 +720,30 @@ p {
     object-fit: contain;
     border-radius: 30%;
     width: 400px;
-    height: 400px;
+    height: 300px;
     transition: 0.2s;
   }
 }
 /* mobile about  grid*/
 @media (max-width: 1200px) {
   .about__grid {
+    opacity: 0;
+    animation: fadeIn 1s forwards;
+    animation-delay: 0s;
     gap: 30px;
     align-items: center;
     margin-bottom: 50px;
+  }
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    1% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
   }
   .about__grid img {
     object-fit: contain;
@@ -722,10 +794,24 @@ p {
 /* mobile blog grid*/
 @media (max-width: 1200px) {
   .blog__grid {
+    opacity: 0;
+    animation: fadeIn 1s forwards;
+    animation-delay: 0.3s;
     display: grid;
     gap: 100px;
     margin-top: 100px;
     margin-bottom: 50px;
+  }
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    1% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
   }
   .blog__grid-element {
     margin: 0px 30px 0px 30px;
@@ -785,13 +871,12 @@ p {
   content: "→";
 }
 
-/* contact page CSS */
 /*mobile contact form*/
 @media (max-width: 1200px) {
   .contact__form-logo {
     display: none;
   }
-  .contact__form-container {
+  .contact__form {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -799,7 +884,7 @@ p {
     gap: 10px;
     align-content: center;
   }
-  .contact__form-div .contact__form-background {
+  .contact__form-background {
     box-shadow: 0px 0px 5px 0px #365582;
     border-radius: 3px;
     background-color: #242425;
@@ -810,12 +895,12 @@ p {
 }
 /*desktop contact form*/
 @media (min-width: 720px) {
-  .contact__form-container {
+  .contact__form {
     display: flex;
     justify-content: center;
     gap: 20vw;
   }
-  .contact__form-div .contact__form-background {
+  .contact__form-background {
     box-shadow: 0px 0px 5px 0px #365582;
     border-radius: 3px;
     background-color: #242425;
@@ -824,13 +909,38 @@ p {
     margin-bottom: 50px;
   }
 }
-.contact__form-container h2 {
+.contact__form {
+  /* the tab on right side for contact details*/
+  /* center the content inside the contact form card*/
+}
+.contact__form h2 {
   margin-top: 50px;
   margin-left: 60px;
   font-size: 48px;
 }
-
-/* the tab on right side for contact details*/
+.contact__form-logo {
+  opacity: 0;
+  animation: fadeIn 1s forwards;
+  animation-delay: 0.3s;
+  position: relative;
+  justify-self: center;
+}
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  1% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+.contact__form-logo img {
+  object-fit: contain;
+  width: 400px;
+  height: 400px;
+}
 .contact__form-div {
   opacity: 0;
   animation: fadeIn 1s forwards;
@@ -872,36 +982,9 @@ p {
   background-color: rgba(0, 0, 0, 0.2039215686);
   border-width: 1px;
 }
-
-/* center the content inside the contact form card*/
 .contact__form-wrapper {
   display: flex;
 }
-
 .contact__form-inputs {
   margin-left: 50px;
-}
-
-.contact__form-logo {
-  opacity: 0;
-  animation: fadeIn 1s forwards;
-  animation-delay: 0.3s;
-  position: relative;
-  justify-self: center;
-}
-@keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
-  1% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-.contact__form-logo img {
-  object-fit: contain;
-  width: 400px;
-  height: 400px;
 }
