separated global variables into a sass file

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,7 @@
 //utils
 
+//import global variables used across all the website
+@import "./utils/variables";
 //import mixins (animations)
 @import "./utils/mixins";
 
