--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -26,9 +26,9 @@
     align-self: center;
     height: 25px;
     transition: 0.2s;
-}
 
-#footer__logo:hover {
-    transition: 0.2s;
-    transform: scale(1.2);
+    &:hover {
+        transition: 0.2s;
+        transform: scale(1.2);
+    }
 }
