Revert "fixed navbar position issue"
This reverts commit 012cd77a799db38260235b83fb3454e0b745d409.

--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -26,9 +26,9 @@
     align-self: center;
     height: 25px;
     transition: 0.2s;
+}
 
-    &:hover {
-        transition: 0.2s;
-        transform: scale(1.2);
-    }
+#footer__logo:hover {
+    transition: 0.2s;
+    transform: scale(1.2);
 }
