--- a/styles/main.css
+++ b/styles/main.css
@@ -8,6 +8,7 @@
 
 /*define website background*/
 body {
+  backdrop-filter: blur(4px);
   background-color: #232323;
 }
 
@@ -443,6 +444,7 @@ span {
   height: 25px;
   transition: 0.2s;
 }
+
 #footer__logo:hover {
   transition: 0.2s;
   transform: scale(1.2);
