--- a/sass/components/_introductory_hero.scss
+++ b/sass/components/_introductory_hero.scss
@@ -1,6 +1,6 @@
 /* the following CSS defines the hero attributes for the other pages */
 
-.hero__container-image {
+.introductory__hero-container {
     @include fadeInAnimation(0.6s, 0s);
     padding-top: 60px;
     display: flex;
@@ -8,10 +8,14 @@
     justify-content: center;
     height: 500px;
 
-    img {
+         
+    &-image {
         height: 100%;
         width: 100%;
-        object-fit: cover;
+        background-attachment: fixed;
+        background-position: center top;
+        background-size: cover;
+        background-repeat: no-repeat;
     }
 
     h1 {
