--- a/styles/main.css
+++ b/styles/main.css
@@ -234,7 +234,7 @@ span {
 }
 
 /* the following CSS defines the hero attributes for the other pages */
-.hero__container-image {
+.introductory__hero-container {
   opacity: 0;
   animation: fadeIn 0.6s forwards;
   animation-delay: 0s;
@@ -255,12 +255,15 @@ span {
     opacity: 1;
   }
 }
-.hero__container-image img {
+.introductory__hero-container-image {
   height: 100%;
   width: 100%;
-  object-fit: cover;
+  background-attachment: fixed;
+  background-position: center top;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
-.hero__container-image h1 {
+.introductory__hero-container h1 {
   opacity: 0;
   animation-name: slideDown;
   animation-duration: 1s;
