updated P tag font

--- a/sass/components/_introductory_hero.scss
+++ b/sass/components/_introductory_hero.scss
@@ -13,7 +13,7 @@
         height: 100%;
         width: 100%;
         background-attachment: fixed;
-        background-position: center top;
+        background-position: bottom center;
         background-size: cover;
         background-repeat: no-repeat;
     }
