--- a/sass/views/_contact.scss
+++ b/sass/views/_contact.scss
@@ -19,7 +19,7 @@
             box-shadow: 0px 0px 5px 0px #365582;
             border-radius: 3px;
             background-color: #242425;
-            height: 350px;
+            height: auto;
             width: 90vw;
             margin-bottom: 50px;
         }
@@ -38,7 +38,7 @@
             box-shadow: 0px 0px 5px 0px #365582;
             border-radius: 3px;
             background-color: #242425;
-            height: 350px;
+            height: auto;
             width: 600px;
             margin-bottom: 50px;
         }
@@ -92,7 +92,6 @@
             width: 80%;
             height: 70px;
             margin-top: 30px;
-            margin-bottom: 30px;
             color: white;
             background-color: #00000034;
             border-width: 1px;
