--- a/sass/views/_projects.scss
+++ b/sass/views/_projects.scss
@@ -50,10 +50,19 @@
         margin: 50px auto;
         gap: 50px;
 
+        //if we use a video, then do this
+        &-image-container-video {
+            object-fit: cover;
+            border-radius: 5%;
+            width: min(21vw, 400px);
+            height: 250px;
+            transition: 0.2s;
+        }
+
         img {
             object-fit: cover;
             border-radius: 5%;
-            width: min( 21vw, 400px);
+            width: min(21vw, 400px);
             height: 250px;
             transition: 0.2s;
         }
@@ -72,11 +81,11 @@
             word-break: break-all;
             transition: ease 0.2s;
         }
-    
-}
+
+    }
 
     /* center the project grid item if it is alone*/
-     :nth-last-child(1):nth-child(odd) {
+    :nth-last-child(1):nth-child(odd) {
         grid-column: 1 / span 4;
         justify-self: center;
     }
@@ -84,21 +93,33 @@
 
 /* set out position to relative in order to center the text using absolute position*/
 .projects__grid-image-container {
-  
+
     position: relative;
     justify-self: center;
 
-        img:hover {
-          transform: scale(1.2);
-          box-shadow: 0px 0px 20px 0px $boxShadowColor;
-      
-          // sets the opacity of the p tag to 1 so it becomes visible
-          + p {
+    //hover effect for images
+    img:hover {
+        transform: scale(1.2);
+        box-shadow: 0px 0px 20px 0px $boxShadowColor;
+
+        // sets the opacity of the p tag to 1 so it becomes visible
+        +p {
             background-color: rgba(12, 12, 12, 0.805);
             transition: ease 0.2s;
             opacity: 1;
-          }
         }
     }
 
+    //hover effect for videos
+    video:hover {
+        transform: scale(1.2);
+        box-shadow: 0px 0px 20px 0px $boxShadowColor;
 
+        // sets the opacity of the p tag to 1 so it becomes visible
+        +p {
+            background-color: rgba(12, 12, 12, 0.805);
+            transition: ease 0.2s;
+            opacity: 1;
+        }
+    }
+}
