Updated video size from projects page for mobile view

--- a/sass/views/_projects.scss
+++ b/sass/views/_projects.scss
@@ -16,8 +16,8 @@
         &-image-container-video {
             object-fit: cover;
             border-radius: 5%;
-            width: min(21vw, 400px);
-            height: 250px;
+            width: 250px;
+            height: 150px;
             transition: 0.2s;
         }
 
