--- a/sass/views/_about-me.scss
+++ b/sass/views/_about-me.scss
@@ -5,25 +5,13 @@
     display: flex;
     gap: 30px;
     justify-content: center;
-}
 
-.profile-picture {
-    box-shadow: 0px 30px 50px -10px rgba(0, 0, 0, 0.7);
-}
-
-/* desktop about  grid*/
-@media (min-width : 1200px) {
-
-    .about__grid {
-        @include fadeInAnimation(1s, 0s);
-        img {
-            object-fit: cover;
-            box-shadow: 0px 30px 50px -10px rgba(0, 0, 0, 0.7);
-            border-radius: 3%;
-            width: 400px;
-            height: 300px;
-            transition: 0.2s;
-        }
+    img {
+        object-fit: cover;
+        border-radius: 5%;
+        width: min(40vw, 400px);
+        height: min(30vw, 250px);
+        transition: 0.2s;
     }
 }
 
@@ -32,16 +20,22 @@
 
     .about__grid {
         @include fadeInAnimation(1s, 0s);
-        gap: 30px;
-        align-items: center;
         margin-bottom: 50px;
-
-        img {
-            object-fit: contain;
-            border-radius: 30%;
-            width: 140px;
-            height: 140px;
-            transition: 0.2s;
-        }
     }
 }
+
+//the profile picture CSS
+.profile-picture {
+    @include fadeInAnimation(2s, 0s);
+    display: flex;
+    align-self: center;
+    object-fit: cover;
+    border-radius: 5%;
+
+    height: min(50vw, 250px);
+    width: min(80vw, 350px);
+    box-shadow: 0px 30px 50px -10px rgba(0, 0, 0, 0.7);
+
+
+}
+
