--- a/styles/main.css
+++ b/styles/main.css
@@ -814,46 +814,20 @@ span {
     opacity: 1;
   }
 }
-
-.profile-picture {
-  box-shadow: 0px 30px 50px -10px rgba(0, 0, 0, 0.7);
+.about__grid img {
+  object-fit: cover;
+  border-radius: 5%;
+  width: min(40vw, 400px);
+  height: min(30vw, 250px);
+  transition: 0.2s;
 }
 
-/* desktop about  grid*/
-@media (min-width: 1200px) {
-  .about__grid {
-    opacity: 0;
-    animation: fadeIn 1s forwards;
-    animation-delay: 0s;
-  }
-  @keyframes fadeIn {
-    0% {
-      opacity: 0;
-    }
-    1% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 1;
-    }
-  }
-  .about__grid img {
-    object-fit: cover;
-    box-shadow: 0px 30px 50px -10px rgba(0, 0, 0, 0.7);
-    border-radius: 3%;
-    width: 400px;
-    height: 300px;
-    transition: 0.2s;
-  }
-}
 /* mobile about  grid*/
 @media (max-width: 1200px) {
   .about__grid {
     opacity: 0;
     animation: fadeIn 1s forwards;
     animation-delay: 0s;
-    gap: 30px;
-    align-items: center;
     margin-bottom: 50px;
   }
   @keyframes fadeIn {
@@ -867,14 +841,31 @@ span {
       opacity: 1;
     }
   }
-  .about__grid img {
-    object-fit: contain;
-    border-radius: 30%;
-    width: 140px;
-    height: 140px;
-    transition: 0.2s;
+}
+.profile-picture {
+  opacity: 0;
+  animation: fadeIn 2s forwards;
+  animation-delay: 0s;
+  display: flex;
+  align-self: center;
+  object-fit: cover;
+  border-radius: 5%;
+  height: min(50vw, 250px);
+  width: min(80vw, 350px);
+  box-shadow: 0px 30px 50px -10px rgba(0, 0, 0, 0.7);
+}
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  1% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
   }
 }
+
 /* blog page CSS*/
 /*set paragraph size for mobile blog title*/
 @media (max-width: 720px) {
