--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -7,28 +7,28 @@
     justify-content: center;
     min-height: 200px;
     background-color: #242425;
-}
 
-#footer__edge {
-    margin-top: 60px;
-    position: absolute;
-    display: flex;
-    width: 50%;
-    height: 1px;
-    background-color: #006aff;
-}
+    &__edge {
+        margin-top: 60px;
+        position: absolute;
+        display: flex;
+        width: 50%;
+        height: 1px;
+        background-color: $secondaryColor;
+    }
 
-#footer__author {
-    font-size: 12px;
-}
+    &__author {
+        font-size: 12px;
+    }
 
-#footer__logo {
-    align-self: center;
-    height: 25px;
-    transition: 0.2s;
-
-    &:hover {
+    &__logo {
+        align-self: center;
+        height: 25px;
         transition: 0.2s;
-        transform: scale(1.2);
+
+        &:hover {
+            transition: 0.2s;
+            transform: scale(1.2);
+        }
     }
 }
