--- a/sass/components/_navbar.scss
+++ b/sass/components/_navbar.scss
@@ -2,7 +2,7 @@
     @include fadeInAnimation(0.5s, 0s);
     min-height: 60px;
     background-color: $primaryColor;
-    box-shadow: 1px 1px 6px #000;
+    box-shadow: 0px 1px 2px $secondaryColor;
 
 /* styles for navbar when collapsed */
 
@@ -30,10 +30,9 @@
 }
 
 .nav-link {
-    font-family: Anuphan;
     font-size: 20px;
     transition: 0.2s;
-    line-height: 20px;
+    line-height: 0px;
 
     &.active {
         text-decoration: underline;
