--- a/styles/main.css
+++ b/styles/main.css
@@ -45,6 +45,13 @@ p {
   color: white;
 }
 
+/* set font for links */
+a {
+  line-height: 50px;
+  font-family: league-spartan;
+  font-weight: bold;
+}
+
 /* set span colors */
 span {
   font-weight: bold;
@@ -206,7 +213,7 @@ span {
   animation-delay: 0s;
   min-height: 60px;
   background-color: #232323;
-  box-shadow: 1px 1px 6px #000;
+  box-shadow: 0px 1px 2px #006aff;
   /* styles for navbar when collapsed */
 }
 @keyframes fadeIn {
@@ -241,10 +248,9 @@ span {
 }
 
 .nav-link {
-  font-family: Anuphan;
   font-size: 20px;
   transition: 0.2s;
-  line-height: 20px;
+  line-height: 0px;
 }
 .nav-link.active {
   text-decoration: underline;
