added missing shadow to about me images

--- a/sass/views/_about-me.scss
+++ b/sass/views/_about-me.scss
@@ -7,6 +7,7 @@
     justify-content: center;
 
     img {
+        box-shadow: 0px 30px 50px -10px rgba(0, 0, 0, 0.7);
         object-fit: cover;
         border-radius: 5%;
         width: min(40vw, 400px);
