--- a/styles/main.css
+++ b/styles/main.css
@@ -824,6 +824,7 @@ span {
   }
 }
 .about__grid img {
+  box-shadow: 0px 30px 50px -10px rgba(0, 0, 0, 0.7);
   object-fit: cover;
   border-radius: 5%;
   width: min(40vw, 400px);
